Fixed horizontal scrolling for iOS safari.

--- a/media/css/mocotw/shop-with-firefox.less
+++ b/media/css/mocotw/shop-with-firefox.less
@@ -1,5 +1,9 @@
 @import "../sandstone/lib";
 
+html {
+  overflow-x: hidden;
+}
+
 .download-button small.download-other a:link, .other .download-button-mobile small.download-other a:link, .android .download-button-desktop small.download-other a:link, .download-button small.download-other a:visited, .other .download-button-mobile small.download-other a:visited, .android .download-button-desktop small.download-other a:visited {
   color: rgb(203, 203, 203);
 }
